# gog_g0i_autonom

./: CMakeLists.txt  README.md  package.xml  setup.py
Setup/my_time_package.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
install/gog_g0i_autonom/share/gog_g0i_autonom/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gog_g0i_autonom/share/gog_g0i_autonom/cmake/: gog_g0i_autonomConfig.cmake
install/my_time_package/share/my_time_package/: package.bash  package.zsh
launch/: local_time.py
