<package format="2">
	<name>gog_g0i_autonom</name>
	<!-- Ez a név egyezzen meg a CMakeLists.txt fájlban lévő névvel -->
	<version>0.0.0</version>
	<description>A simple ROS 2 time package.</description>

	<maintainer email="your_email@example.com">Your Name</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>